@startuml Classes
title Diagrama de Classes - Bucho-Cheio
skinparam linetype ortho
'left to right direction@startuml Classes
title Diagrama de Classes - Bucho-Cheio
skinparam linetype ortho
'left to right direction

' ======================
' Classes Principais
' ======================
class Restaurante {
    - Long id
    - Long[] idPratos
    - String localizacao
    - String nome
    - String cnpj
    - String horarioFuncionamento
    - String telefone
    + findRestauranteById()
    + addPrato()
    + removePrato()
}

class Relatorio {
    - Long idRestaurante
    + criarRelatorio()
}

class Usuario {

}

class Avaliacao {
    - Long id
    - Long restauranteId
    - String avaliacao
    - Int nota
    + saveAvaliacao()
    + getAllAvaliacoes()
    + findAvaliacaoById()

}

class Prato {
    - Long id
    - float preco
    - String nome
    - String descricao
}

' ======================
' Relacionamentos
' ======================
Usuario "1" --- "N" Avaliacao : realiza
Restaurante "1" -u- "N" Avaliacao : recebe

Restaurante "1" -- "N" Prato : possui

Relatorio "1" -- "N" Restaurante : inclui
Usuario "1" --- "N" Relatorio : consulta
Usuario "1" -- "N" Restaurante : consulta

@enduml


' ======================
' Classes Principais
' ======================
class Restaurante {
    - Long id
    - int[] idPratos
    - String localizacao
    - String nome
    - String CNPJ
    + findRestauranteById()
    + cadastrarRestaurante()
    + listarTodos()
    + filtrarPorLocalizacao()
    + filtrarPorHorario()
    + loginRestaurante()
}

class Relatorio {
    - Long idRestaurante
    + criarRelatorio()
}

class Usuario {

}

class Avaliacao {
    - Long id
    - Long restauranteId
    - String avaliacao
    - Int nota
    - String senha
    + saveAvaliacao()
    + getAllAvaliacoes()
    + findAvaliacaoById()
}

class Prato {
    - float preco
    - String nome
    - String descricao
}

' ======================
' Relacionamentos
' ======================
Usuario "1" --- "N" Avaliacao : realiza
Restaurante "1" -u- "N" Avaliacao : recebe

Restaurante "1" -- "N" Prato : possui

Relatorio "1" -- "N" Restaurante : inclui
Usuario "1" --- "N" Relatorio : consulta
Usuario "1" -- "N" Restaurante : consulta

@enduml